# CodeEZ

./: .gitignore  README.md  codeez.ps1  codeez.py  codeez_gui.py  codeez_gui.pyw  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt  setup.py
codeez/: config.py  llm.py  main.py  utils.py
codeez-extension/: extension.js  package.json
codeez-extension/media/: main.js  style.css
codeez/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py  openrouter_provider.py
docs/: cursor.md
