[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "codeez"
version = "0.1.0"
description = "Agent IA de codage simple et puissant - clone, configure, et code directement"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CodeEZ"},
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]
